<resources>
    <string name="app_name">MyInfo-19</string>
    <string name="exemplo">Positivo</string>
    <string name="contactos">Contactos</string>
    <string name="estou_em_perigo">Estou em Perigo?</string>
    <string name="lista_de_testes">Lista</string>
    <string name="dashboard">Dashboard</string>
    <string name="extra">Concelhos</string>
    <string name="resultado">Resultado:\u0020</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar">Voltar</string>
    <string name="num_infetados">Infetados Diários</string>
    <string name="num_internados">Internados</string>
    <string name="num_internados_uci">Internados UCI</string>
    <string name="num_total_infetados">Total de Infetados</string>
    <string name="num_total_mortes">Total de Mortes</string>
    <string name="num_total_recuperados">Total de Recuperados</string>
    <string name="contactos_telefonicos">Contactos Telefónicos COVID19</string>
    <string name="contactos_digitais">Contactos Digitais COVID19</string>
    <string name="num_telefone_1">+351 808 24 24 24</string>
    <string name="num_telefone_2">+351 300 502 502</string>
    <string name="num_telefone_3">+351 217 929 714</string>
    <string name="num_telefone_4">+351 961 706 472</string>
    <string name="descricao_contactos_1">Linha SNS 24 para triagem de sintomas e esclarecimento de dúvidas sobre COIVD19</string>
    <string name="descricao_contactos_2">Linha Segurança Social para esclarecimentos sobre assistência à familia, subsidio de doença e quarentena</string>
    <string name="descricao_contactos_3">Gabinete de Emergência Consular</string>
    <string name="contacto_digital_1">covid19.min-saude.pt</string>
    <string name="contacto_digital_2">atendimento@SNS24.gov.pt</string>
    <string name="contacto_digital_3">gec@mne.pt</string>
    <string name="contacto_digital_4">Legislação COVID19</string>
    <string name="descricao_contacto_digital_1">Plataforma da DGS para esclarecimentos sobre a COVID-19</string>
    <string name="descricao_contacto_digital_2">Canal SNS 24 para esclarecimentos de dúvidas. Não utilizar para diagnóstico médico</string>
    <string name="descricao_contacto_digital_3">Gabinete de Emergência Consular</string>
    <string name="descricao_contacto_digital_4">Área do Diário da República Eletrónico dedicada à legislação relativa à pandemia</string>
    <string name="resultado_add">Resultado</string>
    <string name="resultado_do_teste">Resultado do teste</string>
    <string name="local">Local</string>
    <string name="local_de_realiza_o_do_teste">Local de realização do teste</string>
    <string name="data_add">Data</string>
    <string name="data_de_registo">Data de registo</string>
    <string name="imagem_do_teste">Imagem do teste</string>
    <string name="guardar">Guardar</string>
    <string name="foto">Foto</string>
    <string name="filtro">Filtro</string>
    <string name="alto">Alto</string>
    <string name="nivel_de_risco">Nível de risco:\u0020</string>
    <string name="posicao_atual">Distrito:\u0020</string>
    <string name="lisboa">Lisboa</string>
    <string name="adicionar_fotografia">Adicionar Fotografia</string>
    <string name="data">Data:\u0020</string>
    <string name="numDiarios">Veja aqui os numeros da Covid-19</string>
    <string name="imagem">Imagem</string>
    <string name="teste_realizado_em">Teste realizado em:\u0020</string>
    <string name="teste_feito_a">Teste feito a:\u0020</string>
    <string name="o_resultado_do_teste_foi">O resultado do teste foi:\u0020</string>
    <string name="detalhes_teste">Detalhes do Teste</string>
    <string name="titulo">MyInfo-19</string>
    <string name="adicionar_teste_titulo">Registe aqui o seu teste</string>
    <string name="mensagem_erro_1">O resultado intruduzido não é valido</string>
    <string name="mensagem_erro_2">Tem de introduzir o local onde foi feito o teste</string>
    <string name="selecionou">Você selecionou\u0020</string>
    <string name="lista_crescente_msg">A lista está agora em ordem crescente</string>
    <string name="lista_decrescente_msg">A lista está agora em ordem decrescente</string>
    <string name="ordenar_lista">Ordenar Lista</string>
    <string name="cancelar">Cancelar</string>
    <string name="crescente">Crescente</string>
    <string name="decrescente">Decrescente</string>
    <string name="ok">Ok</string>
    <string name="baixo">Baixo</string>
    <string name="medio">Medio</string>
    <string name="casos_ativos">Casos Ativos:\u0020</string>
    <string name="mortos">Mortes:\u0020</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="bateria">A sua bateria é inferor a 20%</string>
    <string name="darkmode">Deseja ativar o Dark Mode?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="permissões">As permissões foram recusadas</string>
    <string name="moderada">Moderada</string>
    <string name="elevada">Elevada</string>
    <string name="muito_elevada">Muito Elevada</string>
    <string name="extremamente_elevada">Extremamente Elevada</string>
    <string name="legenda">Legenda:</string>
    <string name="verde_risco_moderado">Verde - Risco Moderado</string>
    <string name="amarelo_risco_elevado">Amarelo - Risco Elevado</string>
    <string name="laranja_risco_muito_elevado">Laranja - Risco Muito Elevado</string>
    <string name="vermelho_risco_extremamente_elevado">Vermelho - Risco Extremamente Elevado</string>
    <string name="mantenha_se_em_seguran_a">Mantenha-se em Segurança!</string>
    <string name="estou_em_perigo_titulo">Estou em perigo?</string>
    <string name="mantanha_se_em_seguran_a">O que é para por?</string>


</resources>