<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="pt.ulusofona.deisi.a2020.cm.g2.ui.fragments.DetalhesTesteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_descricao"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:layout_margin="40dp"
            android:contentDescription="@string/imagem" />

        <TextView
            android:id="@+id/texta_local_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_descricao"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/teste_realizado_em"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/texta_data_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texta_local_descricao"
            android:layout_marginStart="20dp"
            android:text="@string/teste_feito_a"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/texta_resultado_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texta_data_descricao"
            android:layout_marginStart="20dp"
            android:text="@string/o_resultado_do_teste_foi"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </RelativeLayout>



</ScrollView>