<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pt.ulusofona.deisi.a2020.cm.g2.ui.fragments.EstouPerigoFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/estou_perigo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/estou_em_perigo_titulo"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:layout_marginBottom="8dp"
                android:textSize="30sp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/sosCard"
                android:layout_width="999dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_margin="12dp"
                android:layout_below="@+id/estou_perigo"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nivel_risco">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="5dp"
                            android:gravity="center"
                            android:text="@string/nivel_de_risco"
                            android:textColor="@color/tool_principal"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/text_risco"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nivel_risco">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="5dp"
                            android:text="@string/posicao_atual"
                            android:textColor="@color/tool_principal"
                            android:textSize="20sp"

                            />

                        <TextView
                            android:id="@+id/text_posicao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/legenda"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/sosCard"
                android:textColor="@color/blue"
                android:text="@string/legenda"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/verde"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/legenda"
                android:layout_marginStart="10dp"
                android:textColor="@color/green"
                android:text="@string/verde_risco_moderado"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/amarelo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/verde"
                android:layout_marginStart="10dp"
                android:textColor="@color/yellow"
                android:text="@string/amarelo_risco_elevado"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/laranja"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/amarelo"
                android:layout_marginStart="10dp"
                android:textColor="@color/laranja_escuro"
                android:text="@string/laranja_risco_muito_elevado"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/vermelho"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/laranja"
                android:layout_marginStart="10dp"
                android:textColor="@color/red"
                android:text="@string/vermelho_risco_extremamente_elevado"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/fique_em_seguranca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/vermelho"
                android:textColor="@color/blue"
                android:text="@string/mantanha_se_em_seguran_a"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>