<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dashboard_background"
    tools:context=".ui.fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numDiarios"
                android:textSize="22sp"
                android:textColor="@color/white"
                />
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:columnCount="2"
            android:rowCount="5"
            android:layout_marginTop="25dp"
            android:alignmentMode="alignMargins"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:backgroundTint="@color/orange"
                android:layout_margin="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/num_infetados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text=""
                        android:textSize="40sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/num_infetados"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text="@string/num_infetados"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:backgroundTint="@color/orange"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/num_mortes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text=""
                        android:textSize="40sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/num_mortes"
                        android:text="@string/num_mortes"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:backgroundTint="@color/orange"
                android:layout_margin="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/num_recuperados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text=""
                        android:textSize="40sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:layout_below="@+id/num_recuperados"
                        android:text="@string/num_recuperados"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:backgroundTint="@color/orange"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/num_total_infetados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text=""
                        android:textSize="40sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:layout_below="@+id/num_total_infetados"
                        android:text="@string/num_total_infetados"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:backgroundTint="@color/orange"
                android:layout_margin="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/num_total_mortes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text=""
                        android:textSize="40sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:layout_below="@+id/num_total_mortes"
                        android:text="@string/num_total_mortes"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:backgroundTint="@color/orange"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/num_total_recuperados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:text=""
                        android:textSize="40sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blue"
                        android:layout_below="@+id/num_total_recuperados"
                        android:text="@string/num_total_recuperados"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>


</ScrollView>